--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     //Don’t forget to add the RxJava and RxAndroid dependencies//
     /*compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.5'*/
+
+    //circular image view
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
