--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile 'com.android.support:cardview-v7:24.2.0'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:26.0.1'
+    compile 'com.android.support:recyclerview-v7:26.0.1'
 
     //compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.bumptech.glide:glide:4.0.0'
@@ -41,15 +41,9 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.1'
 
     //support library
-    compile 'com.android.support:design:24.2.0'
-
-    //Add the core RxBinding library//
-    //compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
-
-    //Don’t forget to add the RxJava and RxAndroid dependencies//
-    /*compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.5'*/
+    compile 'com.android.support:design:26.0.1'
 
     //circular image view
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.android.support:palette-v7:26.0.1'
 }
